internal/xds/translator/testdata/out/extension-xds-ir/http-route-custom-backend-error.routes.yaml
- ignorePortInHostMatching: true
  name: custom-backend-listener
  virtualHosts:
  - domains:
    - '*'
    name: custom-backend-listener/*
    routes:
    - match:
        prefix: /
      name: custom-backend-route
      route:
        cluster: custom-backend-dest
        upgradeConfigs:
        - upgradeType: websocket
